@@ -41,7 +41,7 @@ goto finish
 
 @rem Search for Java executable in game directory first
 set "JAVA_EXE=%PZ_HOME%\jre64\bin\java.exe"
-if exist "%JAVA_EXE%" goto validateJavaVersion
+if exist "%JAVA_EXE%" goto execute
 
 if defined JAVA_HOME goto findJavaFromJavaHome
 
@@ -57,7 +57,7 @@ goto finish
 set "JAVA_HOME=%JAVA_HOME:"=%"
 set "JAVA_EXE=%JAVA_HOME%\bin\java.exe"
 
-if exist "%JAVA_EXE%" goto validateJavaVersion
+if exist "%JAVA_EXE%" goto execute
 
 echo.
 echo ERROR: JAVA_HOME is set to an invalid directory: %JAVA_HOME%
@@ -67,40 +67,24 @@ echo location of your Java installation.
 
 goto finish
 
-:validateJavaVersion
-@rem Validate java version
-"%JAVA_EXE%" -version 2> version.tmp
-set /p JAVA_VERSION_INFO=<version.tmp
-del version.tmp
-
-set JAVA_VERSION=%JAVA_VERSION_INFO:"=%
-for /f "tokens=3,4 delims=., " %%v in ("%JAVA_VERSION%") do (
-	@rem Only valid version is java 1.8
-    if not %%v%%w == 18 goto wrongJavaVersion
-)
-if "%ERRORLEVEL%" == "0" goto execute
-
-:wrongJavaVersion
-echo.
-echo ERROR: JAVA_HOME points to a wrong Java version (%JAVA_VERSION%).
-echo.
-echo Please set your JAVA_HOME variable in your environment to match the
-echo location of Java version 1.8 installation.
-
-goto finish
-
 :execute
-echo Executing with %JAVA_VERSION_INFO:"=%
+echo Executing with %JAVA_EXE%
 
 @rem Path to Storm jar library directory
 set LIB_PATH=%STORM_HOME%\lib
 
 @rem Setup the command line
-set CLASSPATH=%LIB_PATH%\storm-0.2.1.jar;%LIB_PATH%\asm-9.1.jar;%LIB_PATH%\asm-analysis-9.1.jar;%LIB_PATH%\asm-tree-9.1.jar;%LIB_PATH%\asm-util-9.1.jar;%LIB_PATH%\guava-30.1.1-jre.jar;%LIB_PATH%\log4j-api-2.14.0.jar;%LIB_PATH%\log4j-core-2.14.0.jar;%PZ_HOME%;%PZ_HOME%\jinput.jar;%PZ_HOME%\lwjgl.jar;%PZ_HOME%\lwjgl_util.jar;%PZ_HOME%\sqlite-jdbc-3.27.2.1.jar;%PZ_HOME%\uncommons-maths-1.2.3.jar;%PZ_HOME%\trove-3.0.3.jar;%PZ_HOME%\javacord-2.0.17-shaded.jar;%PZ_HOME%\guava-23.0.jar;%PZ_HOME%\jassimp.jar
+set CLASSPATH=%LIB_PATH%\storm-0.2.1.jar;%LIB_PATH%\asm-9.1.jar;%LIB_PATH%\asm-analysis-9.1.jar;%LIB_PATH%\asm-tree-9.1.jar;^
+%LIB_PATH%\asm-util-9.1.jar;%LIB_PATH%\guava-30.1.1-jre.jar;%LIB_PATH%\log4j-api-2.14.0.jar;%LIB_PATH%\log4j-core-2.14.0.jar;^
+%PZ_HOME%\istack-commons-runtime.jar;%PZ_HOME%\jassimp.jar;javacord-2.0.17-shaded.jar;%PZ_HOME%\javax.activation-api.jar;^
+%PZ_HOME%\jaxb-api.jar;%PZ_HOME%\jaxb-runtime.jar;%PZ_HOME%\lwjgl.jar;%PZ_HOME%\lwjgl-natives-windows.jar;%PZ_HOME%\lwjgl-glfw.jar;^
+%PZ_HOME%\lwjgl-glfw-natives-windows.jar;%PZ_HOME%\lwjgl-jemalloc.jar;%PZ_HOME%\lwjgl-jemalloc-natives-windows.jar;^
+%PZ_HOME%\lwjgl-opengl.jar;%PZ_HOME%\lwjgl-opengl-natives-windows.jar;%PZ_HOME%\lwjgl_util.jar;%PZ_HOME%\sqlite-jdbc-3.27.2.1.jar;^
+%PZ_HOME%\trove-3.0.3.jar;%PZ_HOME%\uncommons-maths-1.2.3.jar;%PZ_HOME%
 
 echo Launching Zomboid Storm...
 echo.
-"%JAVA_EXE%" -Dzomboid.steam=1 -Dzomboid.znetlog=1 -XX:+UseConcMarkSweepGC -XX:-CreateMinidumpOnCrash -XX:-OmitStackTraceInFastThrow -Xms1800m -Xmx2048m -Djava.library.path="%PZ_HOME%" -classpath "%CLASSPATH%" io.pzstorm.storm.core.StormLauncher %*
+"%JAVA_EXE%" -Dzomboid.steam=1 -Dzomboid.znetlog=1 -XX:-CreateCoredumpOnCrash -XX:-OmitStackTraceInFastThrow -XX:+UseZGC -Xms1800m -Xmx2048m -Djava.library.path="%PZ_HOME%/win64/;%PZ_HOME%" -classpath "%CLASSPATH%" io.pzstorm.storm.core.StormLauncher %*
 
 :finish
 exit /b 0
